# revolut-devops-test

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml
helm/revolut-devops-test/: Chart.yaml  values.yaml
helm/revolut-devops-test/templates/: _helpers.tpl  configmap.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
infra/: README.md  main.tf  outputs.tf  variables.tf
infra/modules/gke/: gcr.tf  main.tf  outputs.tf  variables.tf
src/: main.rs
src/app/: api.rs  mod.rs  store.rs
src/app/health/: api.rs  middleware.rs  mod.rs
src/app/hello/: api.rs  mod.rs  store.rs  validation.rs
src/app/hello/validation/: birthday.rs  mod.rs  username.rs
src/setup/: cli.rs  db.rs  http.rs  logger.rs  metrics.rs  mod.rs
