[package]
name = "revolut-devops-test"
version = "0.1.0"
edition = "2021"
authors = ["Kamil Czerwiński <kamil@czerwinski.dev>"]

[dependencies]
axum = "0.7.5"
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.4", features = ["env", "derive"] }
log = "0.4.21"
log4rs = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { version = "1.5.3", features = ["kv-speedb", "sql2"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "signal"] }
regex = "1.10.5"
chrono = { version = "0.4.38", features = ["serde"] }
prometheus = "0.13.4"
lazy_static = "1.4.0"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["timeout", "trace", "request-id", "util"] }
log-mdc = "0.1.0"
rand = "0.8.5"

[dev-dependencies]
surrealdb = { version = "1.5.3", features = ["kv-speedb", "sql2", "kv-mem"] }
tower = "0.4.13"
